Justify spacing between "Solved", "Your time" and "Average" in the solve sticker

--- a/Src/Resources/Puzzle.css
+++ b/Src/Resources/Puzzle.css
@@ -1,108 +1,104 @@
 ﻿body.is-puzzle {
-    overflow: hidden;
+	overflow: hidden;
 }
 
-    body.is-puzzle div.warning {
-        border-left: none;
-        border-right: none;
-        padding: .2cm .4cm;
-        font-size: 12pt;
-    }
+	body.is-puzzle div.warning {
+		border-left: none;
+		border-right: none;
+		padding: .2cm .4cm;
+		font-size: 12pt;
+	}
 
 .puzzle {
-    outline: none;
-    touch-action: none;
+	outline: none;
+	touch-action: none;
 }
 
-    .puzzle svg {
-        user-select: none;
-        margin: 0 auto;
-        display: block;
-    }
+	.puzzle svg {
+		user-select: none;
+		margin: 0 auto;
+		display: block;
+	}
 
-        .puzzle svg .solve-glow {
-            visibility: hidden;
-        }
+		.puzzle svg .solve-glow {
+			visibility: hidden;
+		}
 
-        .puzzle svg * {
-            pointer-events: none;
-            touch-action: none;
-        }
+		.puzzle svg * {
+			pointer-events: none;
+			touch-action: none;
+		}
 
-        .puzzle svg .clickable {
-            pointer-events: all;
-        }
+		.puzzle svg .clickable {
+			pointer-events: all;
+		}
 
-        .puzzle svg .button > rect {
-            fill: white;
-            stroke: black;
-            stroke-width: 0.025;
-        }
+		.puzzle svg .button > rect {
+			fill: white;
+			stroke: black;
+			stroke-width: 0.025;
+		}
 
-        .puzzle svg .button > text.label {
-            fill: black;
-        }
+		.puzzle svg .button > text.label {
+			fill: black;
+		}
 
-        .puzzle svg .button.success > rect {
-            fill: #b8f9bd;
-        }
+		.puzzle svg .button.success > rect {
+			fill: #b8f9bd;
+		}
 
-        .puzzle svg .button.selected > rect {
-            fill: hsl(212, 80%, 50%);
-        }
+		.puzzle svg .button.selected > rect {
+			fill: hsl(212, 80%, 50%);
+		}
 
-        .puzzle svg .button.warning > rect {
-            fill: hsl(0, 80%, 40%);
-        }
+		.puzzle svg .button.warning > rect {
+			fill: hsl(0, 80%, 40%);
+		}
 
-        .puzzle svg .button.selected > text.label, .puzzle svg .button.warning > text.label {
-            fill: white;
-        }
+		.puzzle svg .button.selected > text.label, .puzzle svg .button.warning > text.label {
+			fill: white;
+		}
 
-        .puzzle svg .button:not(.selected):not(.warning):hover > rect {
-            fill: hsl(212, 90%, 90%);
-        }
+		.puzzle svg .button:not(.selected):not(.warning):hover > rect {
+			fill: hsl(212, 90%, 90%);
+		}
 
-        .puzzle svg .edge-cell {
-            fill: transparent;
-            stroke: none;
-        }
+		.puzzle svg .edge-cell {
+			fill: transparent;
+			stroke: none;
+		}
 
-        .puzzle svg .solved-sticker {
-            visibility: hidden;
-        }
+		.puzzle svg .solved-sticker, .puzzle svg .solved-sticker-template {
+			visibility: hidden;
+		}
 
-    .puzzle.solved {
-        background: hsl(115, 50%, 40%);
-    }
+	.puzzle.solved {
+		background: hsl(115, 50%, 40%);
+	}
 
-        .puzzle.solved svg .solved-sticker {
-            visibility: visible;
-        }
+		.puzzle.solved svg .solved-sticker {
+			visibility: visible;
+		}
 
-        .puzzle.solved.no-solve-time svg .solve-time, .puzzle.solved:not(.no-solve-time) svg .no-solve-time {
-            visibility: hidden;
-        }
-
-        .puzzle.solved svg .solve-glow.frame {
-            visibility: visible;
-            stroke: #0f0;
-        }
+		.puzzle.solved svg .solve-glow.frame {
+			visibility: visible;
+			stroke: #0f0;
+		}
 
 .timer-paused {
-    visibility: hidden;
+	visibility: hidden;
 }
 
 @media only screen and (max-width: 860px) {
-    body.is-puzzle #topbar .home {
-        padding-top: .08cm;
-    }
+	body.is-puzzle #topbar .home {
+		padding-top: .08cm;
+	}
 
-    body.is-puzzle #topbar .puzzle-id {
-        position: absolute;
-        top: .255cm;
-        left: 1.8cm;
-        pointer-events: none;
-        touch-action: none;
-    }
+	body.is-puzzle #topbar .puzzle-id {
+		position: absolute;
+		top: .255cm;
+		left: 1.8cm;
+		pointer-events: none;
+		touch-action: none;
+	}
 }
